# fast-api-boilerplate

./: .pre-commit-config.yaml  conftest.py  pyproject.toml  readme.md
.github/workflows/: tests.yaml
api/dependencies/: settings.py
api/server/: server.py
api/server/handlers/: __init__.py
api/server/handlers/dignostic/: __init__.py  ping.py
api/tests/: test_ping.py
data/ci/: coverage.xml
data/settings/: coverage.xml
data/update-python/: coverage.xml
settings/: app.py
settings/test/: test_app.py
tests/fixtures/api/: __init__.py  anyio.py  app.py  client.py
utilities/: base_path.py
